@@ -7,6 +7,7 @@ for XG devices (eg. Yamaha DB50XG).
 Website:
 
   http://qxgedit.sourceforge.net
+  https://qxgedit.sourceforge.io
 
 Project page:
 
