@@ -4,6 +4,11 @@ QXGEdit - Qt XG Editor
 ChangeLog
 
 
+GIT HEAD
+
+- A little hardening on the configure (autoconf) macro side.
+
+
 0.5.0  2017-12-16  End of Autum'17 release.
 
 - Desktop entry specification file is now finally independent
